# Binius-Rust

./: .gitignore  Cargo.toml  README.md
benches/: binary_field_ops_benches.rs  cpu_bench_simd.rs  cpu_bench_v0.rs  cpu_bench_v1.rs
src/: binary_field16.rs  binary_ntt.rs  binary_ntt_cache.rs  binary_ntt_cache_build_test.rs  challenger.rs  lib.rs  main.rs  merkle_tree.rs  p_pcs.rs  prover.rs  utils.rs  verifier.rs
src/other attempt draft/: binary_field16_cache.rs  binary_ntt.rs  binary_ntt_cache_build_test.rs  prover.rs  verifier.rs
src/parallel/: p_utils.rs
src/simd/: binary_field16_simd.rs  binary_field16_simd_gfni_x86.rs  binary_field16_simd_x86.rs  binary_ntt_cache.rs  binary_ntt_cache_gfni.rs  merkle_tree.rs  mod.rs  pcs.rs  utils.rs  utils_gfni.rs
src/sumcheck/: sumcheck.rs
src/vanilla/: binary_field16.rs  challenger.rs  mod.rs  pcs.rs  utils.rs
