[package]
name = "binius_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-util = { version = "0.1.0", git = "https://github.com/Plonky3/Plonky3", rev = "3f5fb24" }
ndarray = "0.16.0"
sha2 = "0.10.8"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"

[dev-dependencies]
criterion = "0.5.0"

[profile.bench]
debug = true

[[bench]]
name = "cpu_bench_simd"
harness = false
